# -toy-nibbler

./: .gitignore  CMakeLists.txt  main.cpp
BlockRenderer/: CMakeLists.txt
BlockRenderer/src/: BlockRenderer.cpp  BlockRenderer.hpp
Core/: CMakeLists.txt
Core/include/: Colour.hpp  Core.hpp
Core/interface/: IRenderer.hpp
Core/src/: AMainLoop.cpp  AMainLoop.hpp  CellMap.cpp  CellMap.hpp  IRenderable.hpp  IUpdateable.hpp  NibblerEngine.cpp  NibblerEngine.hpp  Snake.cpp  Snake.hpp  Vec2i.cpp  Vec2i.hpp
SDL2Inverter/: CMakeLists.txt
SDL2Inverter/src/: SDL2Inverter.cpp  SDL2Inverter.hpp
SDL2Renderer/: CMakeLists.txt
SDL2Renderer/src/: SDL2Renderer.cpp  SDL2Renderer.hpp
SFMLRenderer/: CMakeLists.txt
SFMLRenderer/src/: SFMLRenderer.cpp  SFMLRenderer.hpp
